# xpipe

./: CMakeLists.txt  README.md
sample/: CMakeLists.txt  main.cpp
xpipe/: CMakeLists.txt
xpipe/include/xpipe/: FuncStage.h  Functional.h  IndexSequence.h  Inlet.h  Pipeline.h  Runnable.h  RunnableInlet.h  Stage.h  TaskNodeInlet.h
xpipe/include/xpipe/inner/: AndNode.h  AsyncQueue.h  BaseTask.h  BaseTaskNode.h  FromTaskNode.h  InTypedNode.h  InterruptTaskNode.h  MultiOutConsumerNode.h  MultiOutTypedNode.h  MultiProcTask.h  Node.h  Nullable.h  OrNode.h  OutTypedNode.h  ParNode.h  ProcTaskNode.h  SeqNode.h  SinkTaskNode.h  StageTraits.h  Task.h  TaskNode.h  graphptr.h  util.h
xpipe/include/xpipe/stage/: CopyOf.h  Delay.h  IterateOver.h  SequenceOf.h
xpipe/src/: Pipeline.cpp  Scheduler.cpp  Scheduler.h
xpipe/test/: CMakeLists.txt  PipelineTest.cpp  test.cpp
